# shredword

./: .gitignore  CMakeLists.txt  README.md  base.py  main.py  new.txt  pyproject.toml  test.py  token.rs  tokenizer.py  tokenizer_model.txt
csrc/: base.c  base.h  extra.c  main.c  regex.c  regex.h  tokenizer.c  tokenizer.h
docs/: UserBPE.md
model/: base_1k.model  base_1k.vocab
shred/: __init__.py  _build.py  _core.py  _trainer.py  cbase.py  trainer.py
shred/csrc/: base.cpp  base.h  bpe.cpp  bpe.h  heap.cpp  heap.h  run.cpp  test.cpp  threads.cpp  threads.h  train.cpp  train.h  trie.cpp  trie.h  vocab.txt
shred/csrc/bpe/: bpe.cpp  bpe.h  hash.h  heap.cpp  histogram.cpp  test.cpp
shred/csrc/inc/: chash.h  hash.cpp  hash.h  heap.cpp  heap.h
shred/csrc/trainer/: bpe.cpp  bpe.h  hash.cpp  hash.h  heap.cpp  heap.h  histogram.cpp  histogram.h  test.cpp
shred/csrc/unigram/: core.cpp  core.h  hash.cpp  hash.h  normalize.cpp  normalize.h  run.cpp  tokenmap.cpp  tokenmap.h  training.cpp  training.h  unigram.cpp  unigram.h
shredword/: __init__.py  base.py  cache.py  cbase.py  main.py  regex.py  trainer.py
shredword/csrc/: base.cpp  base.h  cache.cpp  cache.h  main.cpp  main.h  run.cpp  threads.h  tqdm.cpp  tqdm.h  trie.h
shredword/csrc/bpe/: bpe.h  heap.h  histogram.h
src/: base.py  cbase.py  main.py
src/csrc/: base.cpp  base.h  cache.cpp  cache.h  main.cpp  main.h  run.cpp  train.cpp  train.h
test/: bpe_test.cpp  encode_decode_test.cpp  shred_test.py  tqdm_test.cpp  train_test.cpp  training_test.py  unigram_test.cpp
vocab/: base.model  base.vocab  main_vocab.model  main_vocab.vocab  tokenizer.model.model  tokenizer.model.vocab  tokenizer_model.model  trained_vocab.model  trained_vocab.vocab  vocab.model  vocab.vocab
